Docs : Update README

--- a/26 - Stripe Follow Along Nav/My-Index.html
+++ b/26 - Stripe Follow Along Nav/My-Index.html
@@ -143,7 +143,7 @@
 			border-radius: 2px;
 			transition: all 0.5s;
 			transform: translateY(100px);
-			will-change: opacity;
+			will-change: opacity;	/* 브라우저에게 변화의 종류를 미리 힌트제공 => 최적화에 도움 (남발 X) */
 			display: none;
 		}
 
